--- a/comp9417/tutorials/week4/NotebookExercise/Lab4_Classification2_Qs.ipynb
+++ b/comp9417/tutorials/week4/NotebookExercise/Lab4_Classification2_Qs.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,27 +96,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0])"
+       "array([[ 1.    ,  1.    ,  1.    ,  0.    , 71.2833,  1.    ],\n",
+       "       [ 3.    ,  1.    ,  0.    ,  0.    ,  7.925 ,  0.    ],\n",
+       "       [ 1.    ,  1.    ,  1.    ,  0.    , 53.1   ,  0.    ],\n",
+       "       ...,\n",
+       "       [ 1.    ,  1.    ,  0.    ,  0.    , 30.    ,  0.    ],\n",
+       "       [ 1.    ,  0.    ,  0.    ,  0.    , 30.    ,  1.    ],\n",
+       "       [ 3.    ,  0.    ,  0.    ,  0.    ,  7.75  ,  2.    ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y[[1,2,3]]"
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +134,13 @@
       "(2, 0) 0.1780821917808219\n",
       "(2, 1) 0.9122807017543859\n",
       "(3, 0) 0.14218009478672985\n",
-      "(3, 1) 0.4583333333333333\n"
+      "(3, 1) 0.4583333333333333\n",
+      "[  1   5   6   9  12  15  16  17  19  26  28  43  45  49  60  66  67  69\n",
+      "  76  79  84  87  93 100 104 113 115 120 126 131 142 143 148 153 156 164\n",
+      " 170 172 178 182 188 195 218 226 231 232 237 247 252 253 258 262 265 268\n",
+      " 273 277 308 316 332 336 337 348 356 361 365 375 385 390 403 406 409 410\n",
+      " 414 417 420 432 434 441 445 446 461 463 469 495 503 508 513 521 525 526\n",
+      " 532 537 558 569 572 574]\n"
      ]
     }
    ],
@@ -136,7 +148,8 @@
     "combinations = [(i,j) for i in [1,2,3] for j in [0,1]]\n",
     "for c in combinations:\n",
     "    match = np.where((X[:,0] == c[0]) * (X[:,1] == c[1]))[0]\n",
-    "    print(c,sum(Y[match])/float(len(match)))"
+    "    print(c,sum(Y[match])/float(len(match)))\n",
+    "print(match)"
    ]
   },
   {
@@ -228,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +281,7 @@
     "        self.py = sum(Y)/float(len(Y))\n",
     "\n",
     "        # 2) For each feature, x, estimate P(x|y=1) and P(x|y=0)\n",
-    "        # np.where(Y==0)[0] returns the all rows that are survived\n",
+    "        # np.where(Y==0)[0] returns the all rows that are not survived\n",
     "        survived = X[np.where(Y==1)[0],:] # the features of those who survived\n",
     "        died  = X[np.where(Y==0)[0],:] # the features for those who died\n",
     "\n",
