--- a/comp9321/labs/week5/week5_notebook.ipynb
+++ b/comp9321/labs/week5/week5_notebook.ipynb
@@ -793,25 +793,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Place_of_Publication                                               London\n",
-      "Date_of_Publication                                                  1879\n",
-      "Publisher                                                S. Tinsley & Co.\n",
-      "Title                                   Walter Forbes. [A novel.] By A. A\n",
-      "Author                                                              A. A.\n",
-      "Flickr_URL              http://www.flickr.com/photos/britishlibrary/ta...\n",
-      "Name: 206, dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Place_of_Publication</th>\n",
+       "      <th>Date_of_Publication</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Flickr_URL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1879.0</td>\n",
+       "      <td>S. Tinsley &amp; Co.</td>\n",
+       "      <td>Walter Forbes. [A novel.] By A. A</td>\n",
+       "      <td>A. A.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>London; Virtue &amp; Yorston</td>\n",
+       "      <td>1868.0</td>\n",
+       "      <td>Virtue &amp; Co.</td>\n",
+       "      <td>All for Greed. [A novel. The dedication signed...</td>\n",
+       "      <td>A., A. A.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1869.0</td>\n",
+       "      <td>Bradbury, Evans &amp; Co.</td>\n",
+       "      <td>Love the Avenger. By the author of “All for Gr...</td>\n",
+       "      <td>A., A. A.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1851.0</td>\n",
+       "      <td>James Darling</td>\n",
+       "      <td>Welsh Sketches, chiefly ecclesiastical, to the...</td>\n",
+       "      <td>A., E. S.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1857.0</td>\n",
+       "      <td>Wertheim &amp; Macintosh</td>\n",
+       "      <td>[The World in which I live, and my place in it...</td>\n",
+       "      <td>A., E. S.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1875.0</td>\n",
+       "      <td>William Macintosh</td>\n",
+       "      <td>[The World in which I live, and my place in it...</td>\n",
+       "      <td>A., E. S.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1872.0</td>\n",
+       "      <td>The Author</td>\n",
+       "      <td>Lagonells. By the author of Darmayne (F. E. A....</td>\n",
+       "      <td>A., F. E.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>The Coming of Spring, and other poems. By J. A...</td>\n",
+       "      <td>A., J.|A., J.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>London]</td>\n",
+       "      <td>1676.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A Warning to the inhabitants of England, and L...</td>\n",
+       "      <td>Remaʿ.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1676.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A Satyr against Vertue. (A poem: supposed to b...</td>\n",
+       "      <td>A., T.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Coventry</td>\n",
+       "      <td>1802.0</td>\n",
+       "      <td>Printed by J. Turner</td>\n",
+       "      <td>An Account of the many and great Loans, Benefa...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>Christiania</td>\n",
+       "      <td>1859.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Erindringer som Bidrag til Norges Historie fra...</td>\n",
+       "      <td>AALL, Jacob.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>Firenze</td>\n",
+       "      <td>1888.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gli Studi storici in terra d'Otranto ... Framm...</td>\n",
+       "      <td>AAR, Ermanno - pseud. [i.e. Luigi Giuseppe Oro...</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>1676.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>De Aardbol. Magazijn van hedendaagsche land- e...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>Savona</td>\n",
+       "      <td>1888.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cronache Savonesi dal 1500 al 1570 ... Accresc...</td>\n",
+       "      <td>ABATE, Giovanni Agostino.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1888.0</td>\n",
+       "      <td>E. Moxon &amp; Co.</td>\n",
+       "      <td>See-Saw; a novel ... Edited [or rather, writte...</td>\n",
+       "      <td>ABATI, Francesco.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>1860.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Géodésie d'une partie de la Haute Éthiopie,...</td>\n",
+       "      <td>ABBADIE, Antoine Thompson d'.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>1873.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[With eleven maps.]</td>\n",
+       "      <td>ABBADIE, Antoine Thompson d'.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>Puerto-Rico</td>\n",
+       "      <td>1866.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[Historia geográfica, civil y politica de la ...</td>\n",
+       "      <td>ABBAD Y LASIERRA, Agustín Íñigo - Bishop of...</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>1899.0</td>\n",
+       "      <td>W. Abbatt</td>\n",
+       "      <td>The Crisis of the Revolution, being the story ...</td>\n",
+       "      <td>ABBATT, William.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>London</td>\n",
+       "      <td>1879.0</td>\n",
+       "      <td>S. Tinsley &amp; Co.</td>\n",
+       "      <td>Walter Forbes. [A novel.] By A. A</td>\n",
+       "      <td>A. A.</td>\n",
+       "      <td>http://www.flickr.com/photos/britishlibrary/ta...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Place_of_Publication  Date_of_Publication              Publisher  \\\n",
+       "0                     London               1879.0       S. Tinsley & Co.   \n",
+       "1   London; Virtue & Yorston               1868.0           Virtue & Co.   \n",
+       "2                     London               1869.0  Bradbury, Evans & Co.   \n",
+       "3                     London               1851.0          James Darling   \n",
+       "4                     London               1857.0   Wertheim & Macintosh   \n",
+       "5                     London               1875.0      William Macintosh   \n",
+       "6                     London               1872.0             The Author   \n",
+       "7                Puerto Rico                  0.0                    NaN   \n",
+       "8                    London]               1676.0                    NaN   \n",
+       "9                     London               1676.0                    NaN   \n",
+       "10                  Coventry               1802.0   Printed by J. Turner   \n",
+       "11               Christiania               1859.0                    NaN   \n",
+       "12                   Firenze               1888.0                    NaN   \n",
+       "13                 Amsterdam               1676.0                    NaN   \n",
+       "14                    Savona               1888.0                    NaN   \n",
+       "15                    London               1888.0         E. Moxon & Co.   \n",
+       "16                     Paris               1860.0                    NaN   \n",
+       "17                     Paris               1873.0                    NaN   \n",
+       "18               Puerto-Rico               1866.0                    NaN   \n",
+       "19                  New York               1899.0              W. Abbatt   \n",
+       "20                    London               1879.0       S. Tinsley & Co.   \n",
+       "\n",
+       "                                                Title  \\\n",
+       "0                   Walter Forbes. [A novel.] By A. A   \n",
+       "1   All for Greed. [A novel. The dedication signed...   \n",
+       "2   Love the Avenger. By the author of “All for Gr...   \n",
+       "3   Welsh Sketches, chiefly ecclesiastical, to the...   \n",
+       "4   [The World in which I live, and my place in it...   \n",
+       "5   [The World in which I live, and my place in it...   \n",
+       "6   Lagonells. By the author of Darmayne (F. E. A....   \n",
+       "7   The Coming of Spring, and other poems. By J. A...   \n",
+       "8   A Warning to the inhabitants of England, and L...   \n",
+       "9   A Satyr against Vertue. (A poem: supposed to b...   \n",
+       "10  An Account of the many and great Loans, Benefa...   \n",
+       "11  Erindringer som Bidrag til Norges Historie fra...   \n",
+       "12  Gli Studi storici in terra d'Otranto ... Framm...   \n",
+       "13  De Aardbol. Magazijn van hedendaagsche land- e...   \n",
+       "14  Cronache Savonesi dal 1500 al 1570 ... Accresc...   \n",
+       "15  See-Saw; a novel ... Edited [or rather, writte...   \n",
+       "16  Géodésie d'une partie de la Haute Éthiopie,...   \n",
+       "17                                [With eleven maps.]   \n",
+       "18  [Historia geográfica, civil y politica de la ...   \n",
+       "19  The Crisis of the Revolution, being the story ...   \n",
+       "20                  Walter Forbes. [A novel.] By A. A   \n",
+       "\n",
+       "                                               Author  \\\n",
+       "0                                               A. A.   \n",
+       "1                                           A., A. A.   \n",
+       "2                                           A., A. A.   \n",
+       "3                                           A., E. S.   \n",
+       "4                                           A., E. S.   \n",
+       "5                                           A., E. S.   \n",
+       "6                                           A., F. E.   \n",
+       "7                                       A., J.|A., J.   \n",
+       "8                                              Remaʿ.   \n",
+       "9                                              A., T.   \n",
+       "10                                                NaN   \n",
+       "11                                       AALL, Jacob.   \n",
+       "12  AAR, Ermanno - pseud. [i.e. Luigi Giuseppe Oro...   \n",
+       "13                                                NaN   \n",
+       "14                          ABATE, Giovanni Agostino.   \n",
+       "15                                  ABATI, Francesco.   \n",
+       "16                      ABBADIE, Antoine Thompson d'.   \n",
+       "17                      ABBADIE, Antoine Thompson d'.   \n",
+       "18  ABBAD Y LASIERRA, Agustín Íñigo - Bishop of...   \n",
+       "19                                   ABBATT, William.   \n",
+       "20                                              A. A.   \n",
+       "\n",
+       "                                           Flickr_URL  \n",
+       "0   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "1   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "2   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "3   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "4   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "5   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "6   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "7   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "8   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "9   http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "10  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "11  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "12  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "13  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "14  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "15  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "16  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "17  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "18  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "19  http://www.flickr.com/photos/britishlibrary/ta...  \n",
+       "20  http://www.flickr.com/photos/britishlibrary/ta...  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.loc[206])"
+    "import copy\n",
+    "newbook = copy.deepcopy(df.loc[206])\n",
+    "df.append(newbook, ignore_index=True)"
    ]
   },
   {
