final exam finished...

--- a/comp9321/labs/week9/test_program.ipynb
+++ b/comp9321/labs/week9/test_program.ipynb
@@ -40,7 +40,111 @@
    "source": [
     "for i in range(len(l)):\n",
     "    l[i] = l[i] + 1\n",
-    "l\n"
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm = \"menmen \" * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'menmen menmen menmen menmen menmen menmen menmen menmen menmen menmen'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm = mm.strip(' ')\n",
+    "mm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_list = mm.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen',\n",
+       " 'menmen']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the above code is programed by author mm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asdasd = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asdasd"
    ]
   },
   {
@@ -48,9 +152,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import "
-   ]
+   "source": []
   }
  ],
  "metadata": {
